# MiniLCG

./: CMakeLists.txt  IntVar.cpp  IntVar.h  README.md  Solver.cpp  Solver.h  domain.cpp  domain.h  main.cpp  reason.cpp  reason.h  var.cpp  var.h
minilcg/: intvar.cpp  intvar.h
